# argos

./: .env.example  .gitattributes  .gitignore  ANVIL_OUTPUT_SUMMARY.md  FIXES_APPLIED.md  LENS_SCOUT_INTEGRATION_FIX.md  PARSE_FUNCTIONALITY_COMPLETE.md  README.md  SCOUT_STATUS_ANALYSIS.md  START_BACKEND.bat  START_FRONTEND.bat  analyze_exclude.py  analyze_run.py  black-check-output.txt  check_exclude_types.py  check_execution_logs.py  check_logs.py  check_runs.py  check_scout_db.py  ci-test-report.html  coverage-report.html  coverage.json  debug_parser.py  debug_pytest.py  demo-test-execution-report.html  display_anvil_data.py  inspect_anvil.py  inspect_anvil_schema.py  job-logs.txt  package-lock.json  parse_coverage_job.py  parsed_sample.json  pathlib_rglob_symlink_behavior.md  phase-2-coverage-report.html  phase-3-quality-report.html  quality-comparison.html  run_scout_fetch.py  sample_ci_log.txt  scout_output.txt  start_backend.ps1  (+25 more)
anvil/: -  .coveragerc  .editorconfig  .flake8  BLACK_PARSER_ENHANCEMENT.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TUTORIAL.md  VERDICT_RUNNER_GUIDE.md  debug_check.py  debug_discovery.py  debug_list.py  debug_symlink.py  debug_symlink2.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-execution-report.html  test_output.txt  test_rglob.py  test_symlink_debug.py  test_symlink_walk.py
anvil/anvil/: __init__.py  __main__.py
anvil/anvil/cli/: __init__.py  commands.py  main.py
anvil/anvil/config/: __init__.py  configuration.py
anvil/anvil/core/: __init__.py  file_collector.py  language_detector.py  orchestrator.py  rule_engine.py  statistics_calculator.py  validator_registration.py  validator_registry.py
anvil/docs/: API.md  CONFIGURATION.md  TROUBLESHOOTING.md  USER_GUIDE.md  cross-platform-testing-report.md  test_doc_examples.py
anvil/scripts/: create_test_case_variants.py  extract_black_line_numbers.py  extract_multiple_test_cases.py  fix_test_case_expected_outputs.py  pre-commit-check.py  setup-git-hooks.py  verdict  verdict.bat  verdict.py
anvil/tests/: conftest.py  test_all_validators.py  test_autoflake_parser.py  test_black_diff_extraction.py  test_black_parser.py  test_ci_storage.py  test_clang_format_parser.py  test_clang_tidy_parser.py  test_cli_commands.py  test_cli_formatting.py  test_cli_phase_1_2.py  test_cli_statistics.py  test_configuration.py  test_coverage_parser.py  test_cppcheck_parser.py  test_cpplint_parser.py  test_cross_platform.py  test_encoding.py  test_execution_schema.py  test_file_collector.py  test_flake8_parser.py  test_formatters.py  test_git_hooks.py  test_gtest_parser.py  test_isort_parser.py  test_iwyu_parser.py  test_language_detector.py  test_lint_parser.py  test_orchestrator.py  test_parsed_data_reporter.py  test_parser_framework.py  test_pylint_parser.py  test_pytest_executor.py  test_pytest_parser.py  test_radon_parser.py  test_reporting.py  test_result_comparison.py  test_rule_engine.py  test_smart_filtering.py  test_statistics_database.py  (+7 more)
anvil/validators/: __init__.py  adapters.py
forge/: .coverage  .flake8  README.md  __init__.py  __main__.py  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  setup.py
forge/cli/: __init__.py  argument_errors.py  argument_parser.py  argument_validator.py
forge/cmake/: __init__.py  executor.py  parameter_manager.py
forge/docs/: API.md  README.md  TROUBLESHOOTING.md  TUTORIAL.md  USER_GUIDE.md  cross-platform-testing-report.md  linting-rules.md
forge/forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
forge/inspector/: __init__.py  build_inspector.py
forge/models/: __init__.py  arguments.py  metadata.py  records.py  results.py
forge/scripts/: README.md  list-lint-rules.py  pre-commit-check.py  setup-git-hooks.py
forge/storage/: __init__.py  data_persistence.py  persistence.py  query.py  schema.sql
forge/tests/: __init__.py  conftest.py  test_argument_errors.py  test_argument_parser.py  test_argument_validation.py  test_build_inspection_integration.py  test_cmake_detection.py  test_configure_inspection.py  test_database_schema.py  test_documentation.py  test_e2e_samples.py  test_edge_cases.py  test_executor_basic.py  test_executor_integration.py  test_executor_output.py  test_executor_results.py  test_generator_detection.py  test_logging.py  test_main_errors.py  test_main_integration.py  test_models.py  test_output_formatting.py  test_parameter_manager.py  test_parameter_override.py  test_performance.py  test_persistence_build.py  test_persistence_configure.py  test_persistence_diagnostics.py  test_persistence_init.py  test_persistence_queries.py  test_project_detection.py  test_project_structure.py  test_target_extraction.py  test_warning_error_extraction.py
forge/tutorial/: .gitignore  README.md  TUTORIAL.md
forge/utils/: __init__.py  formatting.py  logging.py  logging_config.py  paths.py
lens/: DOCUMENTATION_INDEX.md  LAUNCH.md  PHASE_1_COMPLETE.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_IMPLEMENTATION.md  PHASE_1_QUICK_START.md  PHASE_2_ROADMAP.md  PHASE_3_AT_A_GLANCE.md  PHASE_3_FRONTEND_COMPLETE.md  PHASE_3_QUICK_REFERENCE.md  PHASE_3_SESSION_SUMMARY.md  PHASE_3_TASKS_5_7_GUIDE.md  README_PHASE_1.md  SERVICE_MANAGEMENT.md  TESTING_GUIDE.md  check_projects.py  fix_project_path.py  kill_services.py  pyproject.toml  setup.py  start_services.ps1  verify-phase-1.bat  verify-phase-1.sh
lens/docs/: PHASE_2_COMPLETE.md  PHASE_3_PROGRESS.md  QUICK_START.md
lens/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
lens/lens/: __init__.py  __main__.py
verdict/: .flake8  README.md  pyproject.toml  requirements.txt  setup.py
verdict/examples/: README.md  adapter.py  case_01.yaml  case_02.yaml  config.yaml
verdict/scripts/: pre-commit-check.py
verdict/tests/: __init__.py  conftest.py  test_cli.py  test_executor.py  test_loader.py  test_logger.py  test_runner.py  test_validator.py
verdict/verdict/: __init__.py  __main__.py  cli.py  executor.py  loader.py  logger.py  runner.py  validator.py
(+683 files in other folders)
