[project]
name = "forge"
version = "0.1.0"
description = "CMake build wrapper with intelligent parameter management"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']
extend-exclude = '''
/(
    \.git
  | __pycache__
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".venv", "venv", "__pycache__", ".pytest_cache"]
known_first_party = ["forge"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_single_line = false
force_sort_within_sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["forge"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__main__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.main]
jobs = 0
recursive = true
ignore = ["tests", "__pycache__", ".pytest_cache", ".venv", "venv"]
ignore-patterns = ["test_.*\\.py"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access (for tests)
]

[tool.pylint.design]
max-args = 7
max-attributes = 10
max-branches = 15
max-locals = 20
max-returns = 8
max-statements = 60

[tool.pylint.similarities]
min-similarity-lines = 6
ignore-imports = true

[tool.vulture]
exclude = ["tests/", "__pycache__/", ".pytest_cache/", ".venv/", "venv/"]
ignore_decorators = ["@pytest.fixture", "@dataclass"]
min_confidence = 80
sort_by_size = true

[tool.radon]
exclude = "tests/*,__pycache__/*,.pytest_cache/*"
# Complexity thresholds: A (1-5), B (6-10), C (11-20), D (21-30), E/F (31+)
# Fail on C or worse (complexity >= 11)
cc_min = "B"  # Minimum acceptable complexity rating
mi_min = 20   # Minimum maintainability index (0-100, lower is worse)
