[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lens"
version = "0.1.0"
description = "CI Analytics and Visualization Tool"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0.0",
]

[tool.setuptools]
packages = ["lens"]
