[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdict"
version = "1.0.0"
description = "Generic test validation framework for comparing actual vs expected outputs"
readme = "README.md"
authors = [
    {name = "Argos Team"}
]
requires-python = ">=3.8"
keywords = ["testing", "validation", "framework", "test-cases"]
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.10",
    "flake8>=4.0",
]

[project.scripts]
verdict = "verdict.cli:main"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
